# rustkeyboard

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deploy.bat  wresources.rc
.github/workflows/: release.yml
src/: animation.rs  config.rs  globals.rs  gui.rs  hid.rs  hook.rs  i18n.rs  main.rs  startup.rs  tray.rs  window.rs
